objects/RuleBitz__c.object
<CustomObject>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParamValue__c</fullName>
        <formula>ObjectType__c + &apos;;&apos; +  Text(Parameter__c)  + &apos;;&apos; +  Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParamValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter__c</fullName>
        <label>Parameter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RuleBitArray__c</fullName>
        <label>RuleBitArray</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Bit_Array__c</fullName>
        <label>Rule Bit Array</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RuleBitz</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ParamValue__c</columns>
        <columns>RuleBitArray__c</columns>
        <columns>ObjectType__c</columns>
        <columns>Parameter__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_RuleBitz</fullName>
        <columns>NAME</columns>
        <columns>ObjectType__c</columns>
        <columns>Parameter__c</columns>
        <columns>Value__c</columns>
        <columns>RuleBitArray__c</columns>
        <filterScope>Everything</filterScope>
        <label>All RuleBitz</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>RuleBitz Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RuleBitz</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>